--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "meadowlark",
   "version": "1.0.0",
-  "description": "",
+  "description": "MEN stack website for a fictional company.",
   "main": "meadowlark.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Nate",
+  "license": "UNLICENSED"
 }
