--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Nate",
   "license": "UNLICENSED",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-handlebars": "^7.1.2"
   }
 }
