--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "MEN stack website for a fictional company.",
   "main": "meadowlark.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Nate",
   "license": "UNLICENSED",
   "dependencies": {
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
