--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express-handlebars": "^7.1.2"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "puppeteer": "^22.7.1"
   },
   "jest": {
     "transform": {}
