--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "MEN stack website for a fictional company.",
   "main": "meadowlark.mjs",
   "scripts": {
+    "start": "node meadowlark.mjs",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "type": "module",
