--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-handlebars": "^7.1.2"
   },
   "devDependencies": {
+    "eslint": "^9.1.1",
     "jest": "^29.7.0",
     "jest-puppeteer": "^10.0.1",
     "portfinder": "^1.0.32",
