--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "meadowlark.mjs",
   "scripts": {
     "start": "node meadowlark.mjs",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "lint": "npx eslint meadowlark.mjs lib/**"
   },
   "type": "module",
   "author": "Nate",
@@ -15,7 +16,9 @@
     "express-handlebars": "^7.1.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.1.1",
     "eslint": "^9.1.1",
+    "globals": "^15.1.0",
     "jest": "^29.7.0",
     "jest-puppeteer": "^10.0.1",
     "portfinder": "^1.0.32",
