--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,10 @@
 # This config was automatically generated from your source code
 # Stacks detected: deps:node:.,test:jest:
 version: 2.1
+docker:
+  - image: circleci/node:14 # Use your desired version
+    environment:
+      NODE_ENV: development # Only needed if puppeteer is in `devDependencies`
 orbs:
   node: circleci/node@5
   puppeteer: threetreeslight/puppeteer@0.1.2
