--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Nate",
   "license": "UNLICENSED",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2"
   },
